--- a/UI/style.css
+++ b/UI/style.css
@@ -1,4 +1,268 @@
+@font-face {
+    font-family: Roboto;
+    src: url(assets/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+    font-family: GothicA1;
+    src: url(assets/fonts/GothicA1-Regular.ttf);
+}
+
 * {
     box-sizing: border-box;
+    font-family: Roboto;
     margin: 0;
+    --main-color: #1E89D1;
+    --secondary-color: #2F9AE0;
+    --text-icons-chat-color: #FFFFFF;
+    font-size: 14px;
+}
+
+body,
+html {
+    height: 100%;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+h1 {
+    color: var(--text-icons-chat-color);
+    font-weight: 500;
+    font-size: 30px;
+}
+
+body {
+    display: grid;
+    grid-template-rows: 2fr 7fr 3fr;
+    height: 100%;
+    background: linear-gradient(to bottom, var(--secondary-color) 33%, #E9E9E9 33%) no-repeat;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: var(--main-color) 100%;
+    background-size: contain;
+}
+
+.logo a {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-bar * {
+    padding: 0 5px 0 5px;
+}
+
+.nav-bar span {
+    color: var(--text-icons-chat-color);
+    font-size: 14px;
+}
+
+main {
+    padding: 3%;
+}
+
+.main-content {
+    display: grid;
+    grid-template-rows: 1fr 7fr 1fr;
+    background-color: var(--text-icons-chat-color);
+    width: 100%;
+    height: 100%;
+}
+
+.filter {
+    display: flex;
+    background-color: #F7F7F7;
+    padding: 2vh 3vw 2vh 3vw;
+    justify-content: space-between;
+}
+
+.date {
+    margin-bottom: 2vh;
+    border: none;
+    outline: none;
+}
+
+.dropdown {
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    padding: 10px;
+    width: 170px;
+    position: absolute;
+    border: #2F9AE0 1px solid;
+    background-color: var(--text-icons-chat-color);
+    z-index: 1;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.send-input {
+    display: flex;
+    align-content: center;
+
+}
+
+.search-input input {
+    background-color: #F7F7F7;
+    border: none;
+    outline: none;
+}
+
+.account-list {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    width: 30vh;
+    margin-left: 5vw;
+}
+
+.account-list img {
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+}
+
+.messages {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 400px;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+    background: #E9E9E9;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main-color);
+}
+
+.message-container {
+    display: flex;
+    height: 110px;
+    padding: 20px;
+}
+
+.message-container span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.message-container p {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 20px 0 10px 0;
+    border-bottom: 1px solid var(--main-color);
+    font-family: GothicA1;
+}
+
+.message-container img {
+    margin: 15px 30px;
+}
+.messages button {
+    width: 300px;
+    background-color: var(--main-color);
+    color: var(--text-icons-chat-color);
+    align-self: center;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 10px 0;
+    border-radius: 0px 0 4px 4px;
+}
+
+.send-input {
+    display: flex;
+    padding: 0 50px 0 50px;
+    background-color: #F7F7F7;
+    justify-content: space-between;
+}
+
+.send-input input {
+    background-color: #F7F7F7;
+    border: none;
+    background: no-repeat bottom, 50% calc(100% - 1px);
+    background-size: 0 100%, 100% 100%;
+    background-image: linear-gradient(0deg, #9c27b0 2px, rgba(156, 39, 176, 0) 0),
+        linear-gradient(0deg, #d2d2d2 1px, hsla(0, 0%, 82%, 0) 0);
+    flex-basis: 60%;
+    height: 30px;
+    align-self: center;
+}
+
+.send-input input:focus {
+    background-size: 100% 100%, 100% 100%;
+    transition-duration: .3s;
+    box-shadow: none;
+    outline: none;
+}
+
+.send-input img {
+    margin-left: 25vw;
+    cursor: pointer;
+}
+
+.send-input button {
+    align-self: center;
+    width: 100px;
+    height: 30px;
+    flex-basis: 7%;
+    background-color: var(--main-color);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: var(--text-icons-chat-color);
+}
+
+footer {
+    display: flex;
+    background-color: #C4C4C4;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+    font-size: 14px;
+}
+
+.info {
+    color: #000000;
+}
+
+footer:last-child {
+    color: rgba(0, 0, 0, 0.4);
 }
