--- a/UI/src/HomePage/HomePage.css
+++ b/UI/src/HomePage/HomePage.css
@@ -33,6 +33,7 @@ h1 {
     font-weight: 500;
     font-size: 30px;
 }
+
 body {
     display: grid;
     grid-template-rows: 2fr 7fr 3fr;
@@ -97,6 +98,7 @@ main {
 
 .dropdown {
     cursor: pointer;
+    width: 12vw;
 }
 
 .dropdown-content {
@@ -113,6 +115,51 @@ main {
 }
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.private-message button {
+    background-color: var(--main-color);
+    border: none;
+    color: var(--text-icons-chat-color);
+    padding: 5px;
+    outline: none;
+    width: 180px;
+}
+
+.arrow {
+    border: solid var(--text-icons-chat-color);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    margin: 3px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
+.account-list {
+    display: none;
+    padding: 10px;
+    position: absolute;
+    width: 180px;
+    border: #2F9AE0 1px solid;
+    background-color: var(--text-icons-chat-color);
+    z-index: 1;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    height: 200px;
+    overflow-y: scroll;
+}
+
+.account {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.private-message:hover .account-list{
     display: block;
 }
 
@@ -179,6 +226,7 @@ main {
 .message-container img {
     margin: 15px 30px;
 }
+
 .messages button {
     width: 300px;
     background-color: var(--main-color);
@@ -195,6 +243,7 @@ main {
     opacity: 40%;
     padding: 0 40px;
 }
+
 .send-input {
     display: flex;
     padding: 0 50px 0 50px;
