--- a/UI/style.css
+++ b/UI/style.css
@@ -76,7 +76,7 @@ main {
 }
 
 .main-content {
-  display: grid;
+  display: none;
   grid-template-rows: 1fr 7fr 1fr;
   background-color: var(--text-icons-chat-color);
   width: 100%;
@@ -84,7 +84,7 @@ main {
 }
 
 .registration-form {
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
@@ -134,6 +134,11 @@ main {
   margin: 0 auto;
   border-radius: 5px;
   padding-bottom: 15vh;
+}
+
+.login-form p {
+  display: none;
+  color: #ff0000
 }
 
 .login-form h2 {
@@ -287,12 +292,22 @@ main {
   border-bottom: 1px solid var(--main-color);
   font-family: GothicA1;
 }
+#delete-msg {
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  border: none;
+  background-color: var(--text-icons-chat-color);
+  cursor: pointer;
+}
+
 
 .message-container img {
   margin: 15px 30px;
 }
 
-#messages-wrapper button {
+.load {
   width: 300px;
   background-color: var(--main-color);
   color: var(--text-icons-chat-color);
