--- a/UI/style.css
+++ b/UI/style.css
@@ -216,6 +216,11 @@ main {
   line-height: 16px;
   height: 200px;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.active-user:hover {
+  text-decoration: underline;
 }
 
 .display-none {
